--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
-<html lang = "pt-BR>
+<html lang = "pt-BR">
 	<head>
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	     <title>Lista do SOE</title>
+
+		 <style>
+			body {
+				background-color: black;
+			}
+			input {
+				margin-top:15px;
+				margin-bottom:10px;
+			}
+			div#cadastro, a {
+				color: white;
+			}			
+			div#frm {
+				background-color: rgb(39, 36, 36);
+				height: 300px;
+				width: 300px;
+			}
+		 </style>
 	</head>
 
 	<body>
+		<div id="frm">
 	   <form method="post" action="sucesso.html">
-	      Login <input type="text" name="login" id="login">
- 	      Senha <input type="password" name="senha" id="senha">
-	      <input type="submit" value="enviar">
+		<div><img src="imagens/logoxp.png"></div>		
+	      <div id="cadastro">
+			Login<br> <input type="text" name="login" id="login"><br>
+ 	      	Senha<br> <input type="password" name="senha" id="senha">
+	      <input type="submit" value="enviar"><br>
+		  <input type="checkbox" name="checar" id="checar">Continuar Conectado<br>
+		</div>
+		  <a href="https://online.igti.com.br/login/canvas">Cadastrar ou recuperar senha</a>
+		</div>
 	   </form> 
 	</body>
 
