--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 			}			
 			div#frm {
 				background-color: rgb(39, 36, 36);
-				height: 300px;
-				width: 300px;
+				height: 350px;
+				width: 450px;
+				margin-left: 300px;
+				margin-top: 300px;
+				text-align: center;
 			}
 		 </style>
 	</head>
@@ -30,9 +33,9 @@
 	   <form method="post" action="sucesso.html">
 		<div><img src="imagens/logoxp.png"></div>		
 	      <div id="cadastro">
-			Login<br> <input type="text" name="login" id="login"><br>
+			E-mail<br> <input type="text" name="login" id="login"><br>
  	      	Senha<br> <input type="password" name="senha" id="senha">
-	      <input type="submit" value="enviar"><br>
+	      <a href="https://online.igiti.com.br/telainicial">Login<br>
 		  <input type="checkbox" name="checar" id="checar">Continuar Conectado<br>
 		</div>
 		  <a href="https://online.igti.com.br/login/canvas">Cadastrar ou recuperar senha</a>
