--- a/index.html
+++ b/index.html
@@ -9,38 +9,60 @@
 		 <style>
 			body {
 				background-color: black;
+				font: normal 11pt Arial;
 			}
 			input {
 				margin-top:15px;
 				margin-bottom:10px;
+				width: 350px;
+				height: 30px;
 			}
 			div#cadastro, a {
 				color: white;
 			}			
-			div#frm {
+			section {
 				background-color: rgb(39, 36, 36);
 				height: 350px;
 				width: 450px;
 				margin-left: 300px;
 				margin-top: 300px;
-				text-align: center;
+				padding: 45px;	
+				border-radius: 5px;			
+			}
+			img#logo {
+				width: 165px;
+				margin-left: 150px;
+			}
+			input#checar {
+				text-align: left;
+			}
+			div#logar {
+				text-align: right;
+				margin-top: 50px;
+			}
+			input#login, #senha {
+				border-radius: 5px;
 			}
 		 </style>
 	</head>
 
 	<body>
-		<div id="frm">
+	<section>
 	   <form method="post" action="sucesso.html">
-		<div><img src="imagens/logoxp.png"></div>		
+		    <div><img src="imagens/logoxp.png" id="logo"></div>		
 	      <div id="cadastro">
-			E-mail<br> <input type="text" name="login" id="login"><br>
- 	      	Senha<br> <input type="password" name="senha" id="senha">
+			<strong>E-mail</strong><br> <input type="text" name="login" id="login"><br>
+ 	      	<strong>Senha</strong><br> <input type="password" name="senha" id="senha">
+		  </div>
+		  <div id="logar">
 	      <a href="https://online.igiti.com.br/telainicial">Login<br>
+		  </div>
 		  <input type="checkbox" name="checar" id="checar">Continuar Conectado<br>
-		</div>
+		
 		  <a href="https://online.igti.com.br/login/canvas">Cadastrar ou recuperar senha</a>
-		</div>
-	   </form> 
+		</form>
+	</section>
+ 
 	</body>
 
 </html>
